[Task #460] : mark safe descriptions

--- a/templates/agenda/event_detail.html
+++ b/templates/agenda/event_detail.html
@@ -12,7 +12,7 @@
 {% endmetablock %}{% endblock %}
 
 {% block meta_description %}{% metablock %}
-    {{ event.description }}
+    {{ event.description|safe }}
 {% endmetablock %}{% endblock %}
 
 {% block page_class %}
