--- a/templates/agenda/event_list.html
+++ b/templates/agenda/event_list.html
@@ -21,7 +21,7 @@
 
 {% block meta_description %}
     {% metablock %}
-        {{ page.description }}
+        {{ page.description|safe }}
     {% endmetablock %}
 {% endblock %}
 
