--- a/templates/core/inc/files.html
+++ b/templates/core/inc/files.html
@@ -9,7 +9,7 @@
         {% if file.description %}
             <br />
             <p>
-                {{ file.description }}
+                {{ file.description|safe }}
             </p>
         {% endif %}
     </li>
