--- a/templates/magazine/article/article_detail.html
+++ b/templates/magazine/article/article_detail.html
@@ -9,7 +9,7 @@
 {% endmetablock %}{% endblock %}
 
 {% block meta_description %}{% metablock %}
-    {{ article.description }}
+    {{ article.description|safe }}
 {% endmetablock %}{% endblock %}
 
 {% block page_class %}
