--- a/templates/magazine/brief/brief_detail.html
+++ b/templates/magazine/brief/brief_detail.html
@@ -13,7 +13,7 @@
                 </span>
             </h3>
             <p>
-               {{ brief.description }}
+               {{ brief.description|safe }}
             </p>
 
         </a>
