--- a/templates/network/organization_list.html
+++ b/templates/network/organization_list.html
@@ -5,7 +5,7 @@
 
 {% block meta_description %}
     {% metablock %}
-        {{ organization.description }}
+        {{ organization.description|safe }}
     {% endmetablock %}
 {% endblock %}
 
