--- a/templates/projects/inc/project_list.html
+++ b/templates/projects/inc/project_list.html
@@ -8,7 +8,7 @@
                 </a>
             </h3>
             <p>
-                {{ project.description }}
+                {{ project.description|safe }}
             </p>
         </div>
         {% endif %}
