--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -54,7 +54,7 @@
     {% if object.description %}
         {% editable object.description %}
             <div class="chapo">
-                {{ object.description }}
+                {{ object.description|safe }}
             </div>
         {% endeditable %}
     {% endif %}
