--- a/templates/core/inc/block.html
+++ b/templates/core/inc/block.html
@@ -19,7 +19,7 @@
                                 {% if block.description %}
                                     <div class="chapo">
                                         {% editable block.description %}
-                                            {{ block.description }}
+                                            {{ block.description|safe }}
                                         {% endeditable %}
                                     </div>
                                 {% endif %}
