--- a/templates/core/inc/slider.html
+++ b/templates/core/inc/slider.html
@@ -4,11 +4,11 @@
         {% for image in slider_images %}
             <li class="slider-page__slide" data-src="{{ MEDIA_URL }}{{ image.file }}">
                 <div class="slider-page__wrapper">
-                    <img title="{{ image.title }}" alt="{{ image.title }} {{ image.description }} {{ image.credits }}" class="slider-page__img" src="{{ MEDIA_URL}}{% thumbnail image.file 0 520 %}" alt="" />
+                    <img title="{{ image.title }}" alt="{{ image.title }} {{ image.description|safe }} {{ image.credits }}" class="slider-page__img" src="{{ MEDIA_URL}}{% thumbnail image.file 0 520 %}" alt="" />
                     <div class="slider-page__caption">
                         {{ image.title }}
                         {% if image.description %}
-                            {{ image.description }}
+                            {{ image.description|safe }}
                         {% endif %}
                         {% if image.credits %}
                             {{ image.credits }}
