--- a/templates/home/inc/service.html
+++ b/templates/home/inc/service.html
@@ -6,7 +6,7 @@
                 {{ service.name }}
             </div>
             <div class="banner__desc fss">
-                {{ service.description }}
+                {{ service.description|safe }}
             </div>
         </div>
     </a>
