--- a/templates/job/candidacy_list.html
+++ b/templates/job/candidacy_list.html
@@ -4,7 +4,7 @@
 {% block meta_title %}{% trans "Candidacies" %}{% endblock %}
 
 {% block meta_description %}{% metablock %}
-{{ candidacy.description }}
+{{ candidacy.description|safe }}
 {% endmetablock %}{% endblock %}
 
 {% block breadcrumb_menu %}
