--- a/templates/job/job_offer_list.html
+++ b/templates/job/job_offer_list.html
@@ -4,7 +4,7 @@
 {% block meta_title %}{% trans "Jobs" %}{% endblock %}
 
 {% block meta_description %}{% metablock %}
-{{ job_offer.description }}
+{{ job_offer.description|safe }}
 {% endmetablock %}{% endblock %}
 
 {% block page_class %}
