--- a/templates/pages/projecttopicpage.html
+++ b/templates/pages/projecttopicpage.html
@@ -12,7 +12,7 @@
 {% endmetablock %}{% endblock %}
 
 {% block meta_description %}{% metablock %}
-{{ page.description }}
+{{ page.description|safe }}
 {% endmetablock %}{% endblock %}
 
 {% block page_class %}
@@ -53,7 +53,7 @@
             <h2 class="dotted">{{ sub_topic.name }}</h2>
             {% if sub_topic.description %}
                 <p>
-                    {{ sub_topic.description }}
+                    {{ sub_topic.description|safe }}
                 </p>
             {% endif %}
             {% if sub_topic.projects.all %}
@@ -66,7 +66,7 @@
                                 </a>
                             </h3>
                             <p>
-                                {{ project.description }}
+                                {{ project.description|safe }}
                             </p>
 
                         </div>
