--- a/themes/vertigo_starts_eu/templates/accounts/account_projects_list.html
+++ b/themes/vertigo_starts_eu/templates/accounts/account_projects_list.html
@@ -8,6 +8,7 @@
 {{ block.super }}
 <div class="accounts-pages__list-style">
 	{% if object_list|length > 0 %}
+		{% csrf_token %}
 		<p class="accounts-pages__header-text-list">Click on green button to edit fields on project</p>
 		{% for object in object_list %}
 			<div class="accounts-pages__element-container">
