--- a/themes/vertigo_starts_eu/static/vertigo_starts_eu/src/sass/modules/_accounts-pages.scss
+++ b/themes/vertigo_starts_eu/static/vertigo_starts_eu/src/sass/modules/_accounts-pages.scss
@@ -74,7 +74,7 @@ $module: ".accounts-pages";
   }
 
   &__button-link {
-    
+
   	color: white;
   	font-size: 16px;
   	font-family: 'Merriweather';
@@ -82,6 +82,7 @@ $module: ".accounts-pages";
   	width: auto;
   	display: block;
   	margin: auto;
+    font-weight: bold;
   }
 
   &__header-text-list {
